--- a/trunk/UnitTestErrorVisualizer/UnitTestErrorVisualizer/UnitTestErrorVisualizer.csproj
+++ b/trunk/UnitTestErrorVisualizer/UnitTestErrorVisualizer/UnitTestErrorVisualizer.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.DXCore.Platform, Version=10.1.5.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -54,7 +57,12 @@
     <Reference Include="DevExpress.CodeRush.VSCore" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrowDescription.cs" />
+    <Compile Include="ErrorDetailsRangeArrow.cs" />
+    <Compile Include="FailedTestInspectorAdornment.cs" />
+    <Compile Include="FailedTestInspectorDocumentAdornment.cs" />
     <Compile Include="MessageLimiter.cs" />
+    <Compile Include="MyClass.cs" />
     <Compile Include="PlugIn1.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -79,7 +87,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Invisible.ico" />
+    <EmbeddedResource Include="FailedTestInspector.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
