--- a/UnitTestErrorVisualizer/UnitTestErrorVisualizer/UnitTestErrorVisualizer.csproj
+++ b/UnitTestErrorVisualizer/UnitTestErrorVisualizer/UnitTestErrorVisualizer.csproj
@@ -59,6 +59,8 @@
   <ItemGroup>
     <Compile Include="ArrowDescription.cs" />
     <Compile Include="ErrorDetailsRangeArrow.cs" />
+    <Compile Include="ErrorDetailsRangeArrowAdornment.cs" />
+    <Compile Include="ErrorDetailsRangeArrowDocAdornment.cs" />
     <Compile Include="FailedTestInspectorAdornment.cs" />
     <Compile Include="FailedTestInspectorDocumentAdornment.cs" />
     <Compile Include="MessageLimiter.cs" />
