--- a/trunk/UnitTestErrorVisualizer/UnitTestErrorVisualizer/UnitTestErrorVisualizer.csproj
+++ b/trunk/UnitTestErrorVisualizer/UnitTestErrorVisualizer/UnitTestErrorVisualizer.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrowDescription.cs" />
+    <Compile Include="EnhancedRangeArrow.cs" />
     <Compile Include="ErrorDetailsRangeArrow.cs" />
     <Compile Include="ErrorDetailsRangeArrowAdornment.cs" />
     <Compile Include="ErrorDetailsRangeArrowDocAdornment.cs" />
