--- a/CR_BlockPainterPlus/CR_BlockPainterPlus/CR_BlockPainterPlus.csproj
+++ b/CR_BlockPainterPlus/CR_BlockPainterPlus/CR_BlockPainterPlus.csproj
@@ -55,6 +55,7 @@
     <Reference Include="DevExpress.DXCore.Controls.XtraTreeList.v6.3, Version=10.1.4.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="DevExpress.DXCore.Parser, Version=10.2.3.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.DXCore.Platform, Version=10.1.4.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
