--- a/CR_DrawLinesBetweenMethods/CR_DrawLinesBetweenMethods/CR_DrawLinesBetweenMethods.csproj
+++ b/CR_DrawLinesBetweenMethods/CR_DrawLinesBetweenMethods/CR_DrawLinesBetweenMethods.csproj
@@ -123,7 +123,9 @@
       <HintPath>$(DxCoreInstallFolder)DevExpress.CodeRush.VSCore.dll</HintPath>
       <AssemblyFolderKey>hklm\dxcore</AssemblyFolderKey>
     </Reference>
-    <Reference Include="DevExpress.DXCore.Platform, Version=10.1.4.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.DXCore.Platform, Version=10.1.4.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="EnvDTE">
       <Name>EnvDTE</Name>
     </Reference>
