--- a/trunk/CR_StyleNinja/CR_StyleNinja/CR_StyleNinja.vbproj
+++ b/trunk/CR_StyleNinja/CR_StyleNinja/CR_StyleNinja.vbproj
@@ -59,6 +59,7 @@
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.DXCore.Parser, Version=10.2.3.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Refactor.core, Version=9.3.3.0, Culture=neutral, PublicKeyToken=3f8e338797a7a380, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
